--- a/x.html
+++ b/x.html
@@ -1,24 +1,70 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
 <link rel="stylesheet" type="text/css" href="style1.css">
-	<title>Best Engineering Colleges in Bangalore with placements - MVJCE</title>
+	
 	<script type="text/javascript">
+
 </script>
+<style>
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  background-color: DodgerBlue;
+}
+
+.flex-container  {
+  background-color: blue;
+  }
+#slider {
+overflow: hidden;
+}
+#slider figure {
+ position: reflection;
+ width: 500%;
+margin: 0;
+left: 0;
+animation:20% slider infinite;
+}
+# slider figure img {
+width: 80%;
+float: left;
+}
+@keyframes slider {
+0% {
+left: 10;
+}
+20% {
+left: 10;
+}
+25% { 
+left: -10%;
+}
+45%: {
+left: -10;
+}
+</style>
 		</head>
 <body>
-<div id="wrapper-container" class="wrapper-container"><div class="email"><i class="fa fa-envelope"></i><a href="mailto:principalengg@mvjce.edu.in ">principalengg@mvjce.edu.in </a> &nbsp;&nbsp;&nbsp;&nbsp;|</div>
-<div class="mobile"><i class="fa fa-phone"></i><a href="tel:+91 80 4299 1000" class="value">+91 80 4299 1000</a>&nbsp;&nbsp;&nbsp;&nbsp;</div>
-<a class="register" href="https://www.mvjce.edu.in/news/" target="_self">News</a> &nbsp;&nbsp;&nbsp;&nbsp;   |&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="register" href="https://www.mvjce.edu.in/all-events/" target="_self">Events</a>&nbsp;&nbsp;&nbsp;&nbsp;   |&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="register" href="https://www.mvjce.edu.in/press-release/" target="_self">MVJCE in News</a>&nbsp;&nbsp;&nbsp;&nbsp;   |&nbsp;&nbsp;&nbsp;&nbsp;
-<a class="register" href="http://45.112.139.194:8088/WebForms/Alumini/AluminiRegistration.aspx?ConnectionID=1&CollegeId=1" target="_blank">Alumni Registration</a></div>
-</div>		
-<header><p>
- <h1>MVJ</h1>college of engineering established in 1982</p>
+<div class="flex-container">
+<div><a href="mailto:principalengg@mvjce.edu.in">principalengg@mvjce.edu.in </a> &nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div><a href="number.html">8042991000</a>&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div><a class="register" href="https://www.mvjce.edu.in/news/" target="_self">News</a>&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div><a class="register" href="https://www.mvjce.edu.in/all-events/" target="_self">Events</a>&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div><a class="register" href="https://www.mvjce.edu.in/press-release/" target="_self">MVJCE in News</a>&nbsp;&nbsp;&nbsp;&nbsp;| &nbsp;&nbsp;&nbsp;&nbsp;</div>
+<div><a class="register" href="http://45.112.139.194:8088/WebForms/Alumini/AluminiRegistration.aspx?ConnectionID=1&amp;CollegeId=1" target="_blank">Alumni Registration</a></div>
+</div>
+<div id="slider">
+<figure>
+<img src="https://images.static-collegedunia.com/public/college_data/images/campusimage/1415701932mj4.jpg" width:"400" height="400">
+<img src="https://images.static-collegedunia.com/public/college_data/images/campusimage/1415701932mj5.jpg" width:"400" height="400">
+<img src="https://images.static-collegedunia.com/public/college_data/images/campusimage/1415701932mj6.jpg" width:"400" height="400">
+</figure>   
+</div>
+ <h1>MVJ</h1>college of engineering </b>brestablished in 1982
 <div class='container'>
       <div class='img_box'>
         <img src="https://images.static-collegedunia.com/public/college_data/images/campusimage/1415701932mj4.jpg" height="200" width="200">
@@ -41,9 +87,7 @@
           <span><a href="https://www.mvjce.edu.in/web/others/contactUs.htm">contact us</a></span>
       </div>
 </div>
-  </header>    
-
-         </p><div class="description">Over 36 years,<strong> MVJCE </strong>has evolved and perfected a unique approach to knowledge delivery for our engineering and management programmes. We are deeply involved at all levels of the students academic life, ensuring that they strive for excellence from the time they step in to the campus. Our emphasis is on a curriculum that builds in knowledge gathering as well as higher order thinking skills. With inputs from motivated and quality faculty, the academic performance of our students continues to set the benchmark for engineering education in Bangalore.</div>
+     </p><div class="description">Over 36 years,<strong> MVJCE </strong>has evolved and perfected a unique approach to knowledge delivery for our engineering and management programmes. We are deeply involved at all levels of the students academic life, ensuring that they strive for excellence from the time they step in to the campus. Our emphasis is on a curriculum that builds in knowledge gathering as well as higher order thinking skills. With inputs from motivated and quality faculty, the academic performance of our students continues to set the benchmark for engineering education in Bangalore.</div>
        </p>
       
      <footer>
